# optboolnet

./: Dockerfile  LICENSE.txt  MANIFEST.in  README.md  setup.cfg  setup.py
.scripts/: run_conda_build.bat  run_conda_build.sh  run_pypi_build.bat  run_pypi_build.sh  upload_conda.bat  upload_conda.sh  upload_pypi.bat  upload_pypi.sh
docs/source/: conf.py  index.rst  modules.rst  optboolnet.instances.rst  optboolnet.rst
example/: S1_breast_cancer_Sahin_et_al.(2019).ipynb  S2_colorectal_cancer_Wynn_et_al.(2012).ipynb  S3_neuroblastoma_Kasemeier-Kulesa_et_al.(2018).ipynb  S4_breast_cancer_Biane_Delaplace(2019).ipynb  breast_cancer_biane_delaplace(2018).ipynb
recipe/: meta.yaml  run_test.bat  run_test.sh
src/optboolnet/: __init__.py  algorithm.py  boolnet.py  checking.py  config.py  exception.py  launch.py  log.py  model.py  version.py
src/optboolnet/instances/: __init__.py
src/optboolnet/instances/L1/: control_setting.json  transition_formula.bnet  transition_formula_neg.bnet
src/optboolnet/instances/L2/: control_setting.json  transition_formula.bnet  transition_formula_neg.bnet
src/optboolnet/instances/L3/: control_setting.json  transition_formula.bnet  transition_formula_neg.bnet
src/optboolnet/instances/L4/: control_setting.json  transition_formula.bnet  (+1 more)
tests/: test_01_configs.py  test_02_load_bnet.py  test_03_pyomo_model.py  test_04_attractor_detection.py  test_05_attractor_ctrl.py  test_06_trap_space_detection.py  test_07_logging.py  test_08_checking.py
tests/test_instance/: benders_config.json  control_setting.json  transition_formula.bnet
(+23 files in other folders)
