[metadata]
name = optboolnet
description = The optimization toolbox for control problems of a Boolean network
long_description = file: README.md
author = MSO Lab
author_email = kaleb.moon@postech.ac.kr
url = https://www.msolab.org/
license = MIT
license_files = 
    LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Education

[options]
install_requires =
    boolean.py
    colomoto_jupyter
    pyomo
    gurobipy
packages=find:
package_dir=
    =src
include_package_data = True

[options.packages.find]
where=src
